--- a/.github/workflows/jh.yml
+++ b/.github/workflows/jh.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: 'Ready'
         run: |
-          wget https://github.com/lem0nb/jianhuang/raw/master/webBenchmark_linux_x64 -O jh
+          wget https://github.com/maintell/webBenchmark/releases/download/0.6/webBenchmark_linux_x64 -O jh
           chmod +x jh
       - name: 'Start JianHuang'
         run: |
